--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,51 @@
-#root {
-  max-width: 1280px;
+/* resets */
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
+/* variables */
+:root {
+  /* lightmode */
+  --lm-lghtblue: #0079ff;
+  --lm-lghtgray: #697c9a;
+  --lm-lghtgrayishblue: #4b6a9b;
+  --lm-lghtgrayishblue2: #2b3442;
+  --lm-creamishwhite: #f6f8ff;
+  --lm-white: #ffffff;
+
+  /* darkmode */
+  --dm-lightblue: #0079ff;
+  --dm-white: #ffffff;
+  --dm-darkblue: #141d2f;
+  --dm-grayishblue: #1e2a47;
+}
+
+/* global styles */
+img {
+  display: block;
+}
+
+body {
+  background: #141d2f;
+  color: white;
+  font-family: 'Space Mono', monospace;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+}
+.app-container {
+  /* border: 1px solid white; */
+  min-width: 250px;
+  max-width: 730px;
+  margin: 1.5rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
