--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -1,8 +1,10 @@
 header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-size: 1.5rem;
   margin-bottom: 2.25rem;
+  background: var(--component-background);
 }
 header h1 {
   font-size: 1.5rem;
@@ -12,11 +14,15 @@ header button {
   background: none;
   border: none;
   cursor: pointer;
-  color: var(--lm-lghtgrayishblue);
+  color: var(--dm-white);
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   gap: 6px;
+  padding-right: 3px;
+}
+header button:focus {
+  outline: none;
 }
 
 header button span {
@@ -29,4 +35,10 @@ header button span {
 header button img {
   height: 20px;
   width: 20px;
+  color: #ff0000;
 }
+/* .moon {
+  height: 20px;
+  width: 20px;
+  fill: red;
+} */
