--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ img {
   display: block;
 }
 
-body {
+.body {
   background: var(--body-background);
   color: var(--text-primary);
   font-family: 'Space Mono', monospace;
@@ -50,10 +50,13 @@ body {
   justify-content: center;
   height: 100vh;
   margin: 0 auto;
+  transition: all 0.5s;
 }
 .app-container {
   /* border: 1px solid white; */
+  color: var(--text-primary);
   min-width: 250px;
   max-width: 730px;
   margin: 1.5rem;
+  transition: all 0.5s;
 }
