--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -4,10 +4,11 @@ header {
   align-items: center;
   font-size: 1.5rem;
   margin-bottom: 2.25rem;
-  background: var(--component-background);
+  /* background: var(--component-background); */
 }
 header h1 {
-  font-size: 1.5rem;
+  font-size: 1.625rem;
+  font-weight: 800;
 }
 
 header button {
