--- a/src/Components/SearchBar.css
+++ b/src/Components/SearchBar.css
@@ -1,17 +1,20 @@
 .search-bar-container {
   margin-bottom: 1rem;
   background: var(--component-background);
+  box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.198567);
+  border-radius: 15px;
 }
 
 .form-container {
   display: flex;
   background-color: var(--dm-grayishblue);
-  padding: 5px;
+  /* padding: 5px; */
   width: 100%;
   height: 60px;
   justify-content: flex-end;
   align-items: center;
   border-radius: 10px;
+  padding: 7px 7px 7px 1rem;
 }
 .form-container img {
   height: 20px;
@@ -27,8 +30,12 @@ input[type='text'] {
   outline: none;
   flex-grow: 2;
 }
+input[type='text']::placeholder {
+  color: var(--text-primary);
+  opacity: 1;
+}
 .form-container button {
-  min-width: 60px;
+  min-width: 70px;
   max-width: 105px;
   padding: auto 10px;
   height: 100%;
@@ -46,4 +53,10 @@ input[type='text'] {
 }
 .form-container button:hover {
   background-color: #60abff;
+}
+
+.no-results {
+  color: red;
+  font-size: 15px;
+  padding-right: 2rem;
 }
