--- a/src/App.css
+++ b/src/App.css
@@ -47,9 +47,10 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   height: 100vh;
   margin: 0 auto;
+  /* padding: 2rem 0; */
   transition: all 0.5s;
   font-size: 13px;
 }
@@ -58,6 +59,12 @@ img {
   color: var(--text-primary);
   min-width: 250px;
   max-width: 730px;
-  margin: 1.5rem;
+  margin: 0 1.5rem;
+
   transition: all 0.5s;
 }
+/* 
+@media (min-width: 900px) {
+  .body {
+  }
+} */
