--- a/src/Components/SearchResullts/SearchResults.css
+++ b/src/Components/SearchResullts/SearchResults.css
@@ -6,6 +6,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 1.5rem 0;
+  min-height: 50vh;
 }
 
 .profile-img {
@@ -55,11 +56,11 @@
 .repo-info tr:first-of-type {
   font-size: 11px;
 }
-.repo-info tr:first-of-type > td {
+.repo-info > thead td {
   padding-bottom: 0.5rem;
   font-weight: 400;
 }
-.repo-info tbody td {
+.repo-info > tbody td {
   font-size: 16px;
   font-weight: 700;
 }
@@ -95,4 +96,28 @@
 
 .not-avail {
   color: gray;
+}
+
+@media (min-width: 500px) {
+  .search-results {
+    gap: 2rem;
+  }
+  .profile-img {
+    height: 117px;
+    width: 117px;
+  }
+
+  .contact-info {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .contact-info li {
+    flex-basis: 45%;
+  }
+}
+
+@media (min-width: 768px) {
+  /* .search-results {
+    grid-template-columns: repeat(2, 1fr);
+  } */
 }
