--- a/src/App.css
+++ b/src/App.css
@@ -63,8 +63,9 @@ img {
 
   transition: all 0.5s;
 }
-/* 
-@media (min-width: 900px) {
+
+@media (min-width: 500px) {
   .body {
+    justify-content: center;
   }
-} */
+}
