--- a/src/Components/SearchResullts/SearchResults.css
+++ b/src/Components/SearchResullts/SearchResults.css
@@ -5,16 +5,18 @@
   padding: 2rem 1.5rem;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 1.5rem 0;
-  min-height: 50vh;
-}
 
+  gap: 1.5rem 0;
+  /* min-height: 50vh; */
+}
+.profile-img-container {
+  grid-column: 1 / 2;
+}
 .profile-img {
   display: block;
   width: 70px;
   height: 70px;
   border-radius: 50%;
-  grid-column: 1 / 2;
 }
 .title-info {
   grid-column: 2 / 5;
@@ -102,9 +104,19 @@
   .search-results {
     gap: 2rem;
   }
+  .profile-img-container {
+    justify-self: center;
+    align-self: start;
+  }
   .profile-img {
     height: 117px;
     width: 117px;
+  }
+
+  .title-info h1 {
+    font-size: 1.625rem;
+    /* margin-bottom: 0.7rem; */
+    line-height: 39px;
   }
   /* repo info */
   .repo-info {
@@ -123,7 +135,39 @@
 }
 
 @media (min-width: 768px) {
-  /* .search-results {
-    grid-template-columns: repeat(2, 1fr);
-  } */
+  .search-results {
+    grid-template-rows: 120px, 1fr;
+    gap: 0;
+  }
+  .repo-info,
+  .bio,
+  .contact-info {
+    grid-column: 2/5;
+    gap: 1rem;
+  }
+  .repo-info,
+  .bio {
+    margin-bottom: 2rem;
+  }
+  .profile-img-container {
+    grid-row: 1/3;
+  }
+  .title-info {
+    padding-left: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+  .title-info > h1 {
+    grid-column: 1/2;
+  }
+  .title-info > h3 {
+    grid-column: 1/2;
+  }
+  .title-info > .created-at-date {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    justify-self: flex-end;
+    align-self: center;
+  }
 }
