--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -15,7 +15,7 @@ header button {
   background: none;
   border: none;
   cursor: pointer;
-  color: var(--dm-white);
+  color: var(--text-primary);
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -29,20 +29,23 @@ header button {
 header button span {
   font-size: 13px;
   font-weight: 700;
-  color: var(--dm-white);
-  font: space mono, monospace, sans-serif;
+  color: var(--text-primary);
+  font-family: 'Space Mono', monospace;
   letter-spacing: 2.5px;
 }
 header button img {
   height: 20px;
   width: 20px;
 }
+/* .dark {
+  color: #4b6a9b;
+}
+.light {
+  color: white;
+} */
 .light:hover {
   color: #90a4d4;
 }
 .dark:hover {
   color: #222731;
-}
-.dark {
-  color: #4b6a9b;
 }
