--- a/src/Components/SearchBar.css
+++ b/src/Components/SearchBar.css
@@ -10,7 +10,7 @@
   background-color: var(--dm-grayishblue);
   width: 100%;
   height: 60px;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   border-radius: 10px;
   padding: 7px 7px 7px 1rem;
@@ -44,7 +44,7 @@ input[type='text']::placeholder {
   color: white;
   background-color: var(--button);
   border-radius: 10px;
-  flex-grow: 1;
+  flex-basis: clamp(70px, 25%, 105px);
   border: none;
   outline: none;
   cursor: pointer;
@@ -56,6 +56,13 @@ input[type='text']::placeholder {
 
 .no-results {
   color: red;
-  font-size: 15px;
-  padding-right: 2rem;
+  font-size: 11px;
+  padding-right: 1rem;
+}
+@media (min-width: 768px) {
+  .no-results {
+    color: red;
+    font-size: 15px;
+    padding-right: 2rem;
+  }
 }
