--- a/src/App.css
+++ b/src/App.css
@@ -35,10 +35,10 @@ img {
   color: var(--text-primary);
   font-family: 'Space Mono', monospace;
   display: flex;
-  flex-direction: column;
+
   align-items: center;
-  justify-content: flex-start;
-  height: 100vh;
+  justify-content: center;
+  min-height: 100vh;
   margin: 0 auto;
   transition: all 0.5s;
   font-size: 13px;
@@ -67,7 +67,7 @@ img {
 }
 @media (min-width: 768px) {
   .body {
-    padding-top: 3rem 0;
+    padding-top: 4rem 0;
   }
   .app-container {
     margin: 0;
